back-feature #52 wrote documentation for Module
